docs/deployment-examples/example-k8s/anchor-platform-dev/reference-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchor-platform-reference-server
  namespace: anchor-platform-dev
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8081       # port number the service will listen on
    targetPort: 8081 # port number pods listen on
  selector:
    app: anchor-platform-reference-server
