docs/deployment-examples/example-k8s/anchor-platform-dev/reference-server-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: anchor-platform-reference-server
  namespace: anchor-platform-dev
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "default"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/browser-xss-filter: "true"
    ingress.kubernetes.io/frame-deny: "true"
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/hsts-max-age: "31536000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"

spec:
  tls:
  - secretName: anchor-platform-reference-server-cert
    hosts:
    - anchor-reference-server-dev.stellar.org
  rules:
  - host: anchor-reference-server-dev.stellar.org
    http:
      paths:
      - path: /
        backend:
          serviceName: anchor-platform-reference-server
          servicePort: 8081
